# bedrock-access-gateway

src/: pyproject.toml  setup.py
src/api/: setting.py  setup.py
src/api/routers/: chat.py  embeddings.py  model.py
