[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-access-gateway"
version = "0.0.1"
authors = [
    { name = "Carlos Santana" },
]
description = "A package that handles mapping between openai chat completions and bedrock"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
package_dir = {"" = "src"}
dependencies = [
    "fastapi==0.111.0",
    "pydantic==2.7.1",
    "uvicorn==0.29.0",
    "mangum==0.17.0",
    "tiktoken==0.6.0",
    "requests==2.32.3",
    "numpy==1.26.4",
    "boto3==1.34.117",
    "botocore==1.34.117"
]

[project.urls]
Homepage = "https://github.com/csantanapr/bedrock-access-gateway"
Issues = "https://github.com/csantanapr/bedrock-access-gateway/issues"